@@ -1,4 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
+15/09/2011
+- optimization of {foreach}; call internal _count() method only when "total" or "last" {foreach} properties are used
+
 11/09/2011
 - added  unregisterObject() methode
 
